# nn_vis

./: .gitignore  bugs.md  iterations.md  progress.md
backend/: pyproject.toml
backend/app/: graph.py  main.py  recalc.py  store.py
backend/app/api/: connections.py  groups.py  modules.py  tensors.py
backend/app/models/: common.py  connection.py  group.py  module.py  tensor.py
backend/tests/: test_all_modules.py  test_connections.py  test_modules.py  test_tensors.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  AppContext.ts  index.css
frontend/src/api/: client.ts
frontend/src/components/: Sidebar.tsx
frontend/src/nodes/: BincountNode.tsx  FlattenNode.tsx  GroupNode.tsx  IndexAddNode.tsx  IndexingNode.tsx  LinearNode.tsx  MulNode.tsx  SigmoidNode.tsx  SiluNode.tsx  SoftmaxNode.tsx  SumNode.tsx  TensorNode.tsx  TextNode.tsx  TopkNode.tsx  UnsqueezeNode.tsx  VarNode.tsx  ViewNode.tsx  WhereNode.tsx
frontend/src/theme/: colors.ts
